unpackaged/main/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <description>This object will track the registrations made for all event records.</description>
    <label>Registration</label>
    <nameField>
        <label>Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>