unpackaged/main/default/objects/Registration__c/fields/Attendee_Email__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Email__c</fullName>
    <description>Field to record the email address of the attendee</description>
    <label>Attendee Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>