unpackaged/main/default/objects/Registration__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <description>The attendee&#39;s name on the registration for the event record.</description>
    <label>Attendee Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>