unpackaged/main/default/objects/Registration__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>master-detail relationship between the Event and Registration objects.</description>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>