unpackaged/main/default/objects/Registration__c/fields/Ticket_Count__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Count__c</fullName>
    <description>Number of tickets per registration record</description>
    <label>Ticket Count</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>