unpackaged/main/default/objects/Registration__c/validationRules/Oversell_Prevention.validationRule-meta.xml
<ValidationRule>
    <fullName>Oversell_Prevention</fullName>
    <active>true</active>
    <description>This validation rule prevents the event record in matter to be oversold by the system.</description>
    <errorConditionFormula>(Event__r.Total_Tickets_Sold__c + Ticket_Count__c) &gt; Event__r.Max_Tickets__c</errorConditionFormula>
    <errorMessage>&quot;Not enough tickets available for this event.&quot;</errorMessage>
</ValidationRule>